# GEOSAN

./: .gitattributes  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
data/: Caracterisation_PCA.dbf  Caracterisation_PCA.shx  ha_indicators_legend.csv  reli_indicators_legend.csv  typology_description_FR.txt  typology_legend.csv  typology_municipalities.gpkg
geojson/: CMS_WGS.qmd  Caracterisation_PCA_wgs_84_2.csv  Pharmacies_WGS.geojson  Typologie_wgs.qmd
geosan/: db.sqlite3  manage.py
geosan/GPKG/: ha_indicators_4326.gpkg  ha_indicators_attr_layers_4326.gpkg
geosan/data/: ha_indicators_legend.csv
geosan/db/: geosan-dashboard.qmd
geosan/geojson/: CMS_WGS.geojson  Caracterisation_PCA_wgs_84_2.csv  Pharmacies_WGS.qmd  municipalities_4326_simplified.geojson  pharmacies_4326.geojson  typology_municipalities_4326_simplified.geojson  vd_medicosocial_institutions_4326.geojson
geosan/legend/: ha_indicators_legend.csv  typology_description_FR.txt  typology_legend.csv
geosan/map/: admin.py  forms.py  models.py  utils.py  utils_var.py  views.py
geosan/map/migrations/: 0001_initial.py
geosan/shapefiles/: Caracterisation_PCA_simplified.dbf  Caracterisation_PCA_simplified.qmd  Caracterisation_PCA_simplified.shp  Caracterisation_PCA_simplified.shx  Communes_WGS.dbf  Communes_WGS.shp
geosan/templates/: index.html  logout.html  typologie.html
geosan/templates/registration/: login.html
geosan/webmapping/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
webmapping/: asgi.py  urls.py
