[tool.poetry]
name = "geosan"
version = "0.1.0"
description = ""
authors = ["Anaïs Ladoy <anais.ladoy@epfl.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.5"
folium = "^0.14.0"
branca = "^0.6.0"
pandas = "^1.5.3"
plotly = "^5.12.0"
numpy = "^1.24.1"
geopandas = "^0.12.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
